tests/baselines/reference/typeParameterDiamond3.errors.txt
tests/cases/compiler/typeParameterDiamond3.ts(8,13): error TS2322: Type 'T | U' is not assignable to type 'Top'.
  Type 'T' is not assignable to type 'Top'.
tests/cases/compiler/typeParameterDiamond3.ts(9,13): error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
  Type 'Top | T | U' is not assignable to type 'T | U'.
    Type 'Top' is not assignable to type 'T | U'.
      Type 'Top' is not assignable to type 'U'.
        Type 'Bottom' is not assignable to type 'U'.
          Type 'Top | T | U' is not assignable to type 'U'.
            Type 'Top' is not assignable to type 'U'.
tests/cases/compiler/typeParameterDiamond3.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  Type 'Top | T | U' is not assignable to type 'Top'.
    Type 'T' is not assignable to type 'Top'.


==== tests/cases/compiler/typeParameterDiamond3.ts (3 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T, U>() {
            function diamondBottom<Bottom extends Top | T | U>() {
                var top: Top;
                var middle: T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:   Type 'T' is not assignable to type 'Top'.
                middle = bottom;
                ~~~~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
!!! error TS2322:   Type 'Top | T | U' is not assignable to type 'T | U'.
!!! error TS2322:     Type 'Top' is not assignable to type 'T | U'.
!!! error TS2322:       Type 'Top' is not assignable to type 'U'.
!!! error TS2322:         Type 'Bottom' is not assignable to type 'U'.
!!! error TS2322:           Type 'Top | T | U' is not assignable to type 'U'.
!!! error TS2322:             Type 'Top' is not assignable to type 'U'.
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   Type 'Top | T | U' is not assignable to type 'Top'.
!!! error TS2322:     Type 'T' is not assignable to type 'Top'.
            }
        }
    }